# crashout

./: Cargo.toml  README.md
contrib/systemd/: crashout.service
src/: coredump.rs  daemon.rs  logs_browser.rs  logview.rs  main.rs  procs.rs  procs_screen.rs  tray.rs  tui.rs
