[package]
name = "crashout"
version = "0.1.0"
edition = "2024"
description = "systemd-coredump watcher + TUI browser"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ksni = "0.2"
notify-rust = "4"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
systemd = "0.10"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = "z"
